# RTStarV

./: .gitignore  CLAUDE.md
docs/protocol/: starv-view-usb-protocol.md
docs/superpowers/plans/: 2026-04-26-subproject-1-imu-driver.md  2026-04-27-windows-native-app.md
docs/superpowers/specs/: 2026-04-26-rtstarv-ar-workspace-design.md  2026-04-27-rtstarv-native-app-design.md
native/: CMakeLists.txt
native/include/: imu_protocol.h  rtstarv_imu.h
native/src/: attitude_solver.cpp  attitude_solver.h  imu_parser.cpp  imu_parser.h  imu_reader.cpp  imu_reader.h  rtstarv_imu.cpp  usb_device.cpp  usb_device.h
native/tests/: test_parser.cpp
platform/windows/: BUILD.md  CMakeLists.txt
platform/windows/idd_driver/: RTStarVDisplay.inf  install.bat
platform/windows/idd_driver/driver/: Device.cpp  Driver.cpp  Driver.h  SwapChain.cpp
platform/windows/resources/: app.rc
platform/windows/shaders/: screen_ps.hlsl  screen_vs.hlsl
platform/windows/src/: app.cpp  app.h  d3d11_renderer.cpp  d3d11_renderer.h  hotkey_manager.cpp  hotkey_manager.h  main.cpp  math_utils.h  screen_capture.cpp  screen_capture.h  screen_layout.cpp  screen_layout.h  screen_quad.cpp  screen_quad.h  tray_icon.cpp  tray_icon.h  virtual_display.cpp  virtual_display.h
tools/windows/: README.md  deep_probe_20260426_172601.json  freq_test_20260426_210907.json  hid_descriptor_probe.py  hid_protocol_probe_20260426_173846.json  imu_activate_probe.py  imu_activate_v2.py  imu_freq_test.py  imu_probe_20260426_204355.json  imu_v2_20260426_205619.json  mag_full_20260426_212415.json  mag_full_dump.py  mag_test.py  mag_test_20260426_211814.json  probe_report_20260426_171439.json  usb_deep_probe.py  usb_diff.py  usb_dump.py  usb_enumerate.py  usb_probe.py  usb_raw_probe.error  usb_raw_probe.py
